<resources>
    <string name="app_name">Xdroid</string>
    <string name="title_activity_main">Xdroid</string>
    <string name="test_mode">Test mode</string>
    <string name="setting">Config</string>
    <string name="injection">Enable Injection</string>
    <string name="xmonkey">Enable XMonkey</string>
    <string name="gps">Enable GPS fake</string>
    <string name="menu">Menu</string>
    <string name="crash">Bug reports</string>
    <string name="userdata">用户数据</string>
    <string name="test">Xmonkey</string>
    <string name="broadcast">系统广播</string>
    <string name="start">Start test</string>
    <string name="stop">Stop test</string>
    <string name="pause">Pause test</string>
    <string name="resume">Continue test</string>
    <string name="coverage">Activity覆盖率统计</string>
    <string name="clear_coverage">清除覆盖率</string>
    <string name="test_time">Test time statistics</string>
    <string name="test_time_total">Total time</string>
    <string name="test_time_test">Test time</string>
    <string name="test_time_manual">Manual time</string>
    <string name="test_coverage_statistics">Test coverage statistics</string>
    <string name="input">Auto input</string>
    <string name="select">Please select app to test</string>
    <string name="all_activity">All activities</string>
    <string name="covered_activity">Covered activities</string>
    <string name="activity_coverage">Activity coverage</string>
</resources>
