<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting"
        android:key="category_setting">

        <SwitchPreference
            android:defaultValue="true"
            android:key="injection"
            android:title="@string/injection" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="xmonkey"
            android:title="@string/xmonkey" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="input"
            android:title="@string/input" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="gps"
            android:title="@string/gps" />

    </PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/test">-->

        <!--<Preference-->
            <!--android:key="broadcast"-->
            <!--android:title="@string/broadcast" />-->


    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="@string/menu">
        <Preference
            android:key="crash"
            android:title="@string/crash" />
        <!--<Preference-->
            <!--android:key="userdata"-->
            <!--android:title="@string/userdata" />-->
        <!--<Preference-->
        <!--android:key="coverage"-->
        <!--android:title="@string/coverage"/>-->
        <!--<Preference-->
            <!--android:key="clear_coverage"-->
            <!--android:title="@string/clear_coverage"/>-->
        <Preference
            android:key="test"
            android:title="@string/test" />


    </PreferenceCategory>

</PreferenceScreen>
